# psychic-octo-train

./: .env.dev  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
betting/: config.py  scheduler.py  utils.py
betting/adapters/: __init__.py  api_football.py  fbref.py  football_data.py  odds_api.py  sqlite_ledger.py
betting/config/: __init__.py  league_config.py  leagues.yaml  market_config.py  markets.yaml
betting/graph/: __init__.py  pipeline.py  state.py
betting/interfaces/: __init__.py  fixture_provider.py  ledger_repository.py  odds_provider.py  stats_provider.py
betting/markets/: evaluator.py
betting/models/: __init__.py  fixture.py  odds.py  signal.py  verdict.py
betting/services/: __init__.py  agent_execution_service.py  agent_recalibration_service.py  agent_repository.py  backup_service.py  csv_download_service.py  fixture_service.py  ledger_service.py  market_service.py  pnl_service.py  result_ingestion_service.py  statistical_service.py
betting/tests/: test_agent_execution_service.py  test_agent_recalibration_service.py  test_agent_repository.py  test_csv_download_service.py  test_evaluator.py  test_fixture_calendar_service.py  test_football_data_provider.py  test_ingest_node.py  test_league_config.py  test_market_config.py  test_market_service.py  test_multi_market.py  test_odds_api_provider.py  (+6 more)
config/: leagues.yaml  markets.yaml
dashboard/: Dockerfile
docs/: mobile-ui-plan.md  profile-system.md  spare-pc-setup.md
frontend/: App.jsx
services/: Dockerfile.backend  Dockerfile.dashboard  nginx.conf
(+129 files in other folders)
