[tool.poetry]
name = "betting"
version = "0.1.0"
description = "Autonomous football betting pipeline spine"
authors = []

[tool.poetry.dependencies]
python = "^3.11"
langgraph = "^0.2"
langchain-core = "^0.2"
pydantic-settings = "^2.0"
scipy = "^1.13"
httpx = "^0.27"
apscheduler = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
